# proc-macro-workshop

./: main.rs
bitfield/impl/: Cargo.toml
bitfield/impl/src/: bits.rs  gen.rs  lib.rs
bitfield/src/: lib.rs
bitfield/tests/: progress.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: progress.rs
debug/: Cargo.toml
debug/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
