[package]
name = "sorted"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
syn = {version = "2.0.79", features = ["full","extra-traits","visit-mut"]}
quote="1.0.37"
proc-macro2 = {version="1.0.88", features = ["span-locations"]}
